[package]
name = "passcod-networkmanager"
version = "0.5.3"
authors = [
    "Tobias Tschinkowitz <tobias.tschinkowitz@icloud.com>",
    "Walter Bonetti",
    "Félix Saparelli <felix@passcod.name>",
]
description = "Bindings for the Linux NetworkManager (fork)"
repository = "https://github.com/passcod/networkmanager"
documentation = "https://docs.rs/passcod-networkmanager"
readme = "README.md"
categories = ["api-bindings", "network-programming", "os::unix-apis"]
keywords = ["networkmanager", "dbus", "wifi", "networking"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
dbus = "0.9.7"
num-traits = "0.2.17"
num-derive = "0.4.1"
thiserror = "1.0.56"
